--- a/Swap-Closet-V4/frontend/src/app/components/c-explorar/carta-horizontal-intercambio/carta-horizontal-intercambio.component.html
+++ b/Swap-Closet-V4/frontend/src/app/components/c-explorar/carta-horizontal-intercambio/carta-horizontal-intercambio.component.html
@@ -36,7 +36,7 @@
           </ion-col>
           <ion-col class="izquierda">
               <ion-icon class=" margen para-iconos izquierda" name="calendar-number-outline"></ion-icon>
-              <p class="margen">{{producto()?.fechaDevolucion}}</p>
+              <p class="margen">{{producto()?.fechaDevolucion | date:'dd/MM/yyyy' }}</p>
           </ion-col>
         </ion-row>
 
