--- a/Swap-Closet-V4/frontend/src/app/pages/anuncio-intercambio/anuncio-intercambio.page.html
+++ b/Swap-Closet-V4/frontend/src/app/pages/anuncio-intercambio/anuncio-intercambio.page.html
@@ -3,37 +3,58 @@
 <ion-content>
 
   <ion-row>
-    <ion-col class="centro" size="2">
-      <ion-button fill="clear" (click)="volver()">
-        <ion-icon class="icono" size="large" name="arrow-back-outline"></ion-icon>
-      </ion-button>
+    <ion-col size="2" class="centro">
+      @if (!modoEdicion()) {
+        <ion-button fill="clear" (click)="volver()">
+          <ion-icon class="flecha" name="arrow-back-outline" size="large"></ion-icon>
+        </ion-button>
+      }@else{
+        <ion-icon name="pencil" size="large"></ion-icon>
+      }
     </ion-col>
 
-    <ion-col class="izquierda" size="7">
-      <h2><b>Detalle del anuncio</b></h2>
+    <ion-col size="7">
+      @if(!modoEdicion()){
+        <h2><b>Detalle del anuncio</b></h2>
+      }@else{
+        <h2><b>Editar anuncio</b></h2>
+      }
     </ion-col>
 
     <ion-col size="3" class="centro-opciones">
-      @if(usuario()?.id === idUsuarioLogueado) {
+      @if (usuario()?.id === idUsuarioLogueado && !modoEdicion()) {
         <ion-button fill="clear" (click)="mostrarOpciones()">
-          <ion-icon class="icono" size="large" name="ellipsis-vertical-outline"></ion-icon>
+          <ion-icon class="icono-puntos" name="ellipsis-vertical-outline" size="large"></ion-icon>
         </ion-button>
       }
     </ion-col>
   </ion-row>
 
-  <app-anuncio-componente
-    [producto]="producto()"
-    [usuario]="usuario()"
-    [estilos]="estilos()"
-    [primeraImagen]="getPrimeraImagen()"
-    [idUsuarioLogueado]="idUsuarioLogueado"
-    [modoEdicion]="modoEdicion()"
-    (guardarHijo)="guardarCambios($event)"
-  ></app-anuncio-componente>
+  @if (!modoEdicion()) {
+    <app-anuncio-componente
+      [producto]="producto()"
+      [usuario]="usuario()"
+      [estilos]="estilos()"
+      [primeraImagen]="getPrimeraImagen()"
+      [idUsuarioLogueado]="idUsuarioLogueado"
+    ></app-anuncio-componente>
+  } @else {
+    <app-anuncio-intercambio
+      [producto]="producto()!"
+      [usuario]="usuario()!"
+      [primeraImagen]="getPrimeraImagen()"
+      [idUsuarioLogueado]="idUsuarioLogueado"
+      (guardar)="onGuardar($event)"
+      (cancelar)="onCancelar()"
+    ></app-anuncio-intercambio>
+  }
+
+  @if(!modoEdicion()) {
+    <ion-footer>
+      <app-btn-contactar></app-btn-contactar>
+    </ion-footer>
+  }
 
 </ion-content>
 
-<ion-footer [routerLink]="['/chat']">
-  <app-btn-contactar></app-btn-contactar>
-</ion-footer>
+
