--- a/Swap-Closet-V4/frontend/src/app/pages/anuncio-intercambio/anuncio-intercambio.page.scss
+++ b/Swap-Closet-V4/frontend/src/app/pages/anuncio-intercambio/anuncio-intercambio.page.scss
@@ -21,3 +21,11 @@
   justify-content: flex-end; /* Alinea el botón a la derecha */
   padding-right: 10px; /* Pequeño padding */
 }
+
+.flecha{
+  color: #000000;
+}
+
+.icono-puntos{
+  color: #F45097;
+}
