--- a/Swap-Closet-V4/frontend/src/app/pages/home/home.page.html
+++ b/Swap-Closet-V4/frontend/src/app/pages/home/home.page.html
@@ -4,7 +4,7 @@
       <ion-row class="caja-menu-sup">
         <h1 class="margen izquierda"><b>Tendencias</b></h1>
         <ion-col size="2">
-          <ion-button size="small" shape="round" (click)="toggleMenu()">
+          <ion-button size="small" class="btn-deplegable" shape="round" (click)="toggleMenu()">
             <ion-icon slot="icon-only" name="add-outline"></ion-icon>
           </ion-button>
         </ion-col>
