--- a/Swap-Closet-V4/frontend/src/app/shared/cabecera-perfil/cabecera-perfil.component.html
+++ b/Swap-Closet-V4/frontend/src/app/shared/cabecera-perfil/cabecera-perfil.component.html
@@ -2,21 +2,19 @@
   <div class="perfil-header">
     <div class="perfil-foto-container">
       <ion-img [src]="usuario()?.urlImg" alt="Foto de perfil" class="perfil-foto" />
-      <ion-chip class="chip-camara" (click)="cambiarFoto()">
-        <ion-icon color="white" name="camera-outline"></ion-icon>
-      </ion-chip>
     </div>
 
-    <h2>{{ usuario()?.nombre }} {{ usuario()?.apellidos }}</h2>
+    <h2>{{ usuarioEstadisticas()?.nombre }} {{ usuarioEstadisticas()?.apellidos }}</h2>
     <p class="perfil-descripcion">
-      {{usuario()?.descripcion}}
+      {{usuarioEstadisticas()?.descripcion}}
     </p>
     <p class="perfil-ubicacion">
       <ion-icon name="location-outline"></ion-icon>
-      {{ usuario()?.direccion }}
+      {{ usuarioEstadisticas()?.direccion }}
     </p>
   </div>
-  <!-- ⭐ RATING SELECCIONABLE -->
+
+
   <div class="perfil-estrellas">
     <ion-icon
       *ngFor="let star of [].constructor(maxStars); let i = index"
@@ -27,30 +25,29 @@
     </ion-icon>
   </div>
 
-  <!-- Estadísticas -->
   <ion-grid class="perfil-stats">
     <ion-row>
       <ion-col>
         <ion-icon name="cube-outline" color="tertiary"></ion-icon>
-        <p class="numero">12</p>
+        <p class="numero">{{usuarioEstadisticas()?.intercambios}}</p>
         <p class="label">Intercambios</p>
       </ion-col>
 
       <ion-col>
         <ion-icon name="star-outline" color="warning"></ion-icon>
-        <p class="numero">{{media()}}</p> <!-- ⭐ MOSTRAR MEDIA -->
+        <p class="numero">{{usuarioEstadisticas()?.raiting}}</p>
         <p class="label">Valoración</p>
       </ion-col>
 
       <ion-col [routerLink]="['/favoritos', usuario()?.id]">
         <ion-icon name="heart-outline" color="danger"></ion-icon>
-        <p class="numero">{{ numFavoritos | async }}</p>
+        <p class="numero">{{ usuarioEstadisticas()?.favoritos }}</p>
         <p class="label">Favoritos</p>
       </ion-col>
 
       <ion-col [routerLink]="['/seguidores', usuario()?.id]">
         <ion-icon name="people-outline" color="medium"></ion-icon>
-        <p class="numero">{{ numSeguidores | async }}</p>
+        <p class="numero">{{ usuarioEstadisticas()?.seguidores }}</p>
         <p class="label">Seguidores</p>
       </ion-col>
     </ion-row>
