--- a/Swap-Closet-V4/frontend/src/app/components/c-anuncio/btn-contactar/btn-contactar.component.html
+++ b/Swap-Closet-V4/frontend/src/app/components/c-anuncio/btn-contactar/btn-contactar.component.html
@@ -2,5 +2,5 @@
   <ion-button fill="clear" expand="block" class="btn-publicar">
     <ion-icon class="icono" name="chatbubble-outline"></ion-icon>
     <p class="texto"><strong>Contactar</strong></p>
-  </ion-button>;
+  </ion-button>
 </ion-card>
