--- a/Swap-Closet-V4/frontend/src/app/components/c-publicar/tipo-oferta/tipo-oferta.component.scss
+++ b/Swap-Closet-V4/frontend/src/app/components/c-publicar/tipo-oferta/tipo-oferta.component.scss
@@ -69,6 +69,7 @@ ion-segment-button[value="prestamo"] {
   width: 100%;
   height: 70px;
   --border-radius: 10px;
+  --background: #3f6bff;
 }
 
 .interior-precio{
