--- a/Swap-Closet-V4/frontend/src/app/components/c-perfil/cabecera-perfil/cabecera-perfil.component.html
+++ b/Swap-Closet-V4/frontend/src/app/components/c-perfil/cabecera-perfil/cabecera-perfil.component.html
@@ -17,43 +17,46 @@
     </p>
   </div>
 
-  <div class="perfil-estrellas">
-    <ion-icon
-      *ngFor="let star of [].constructor(maxStars); let i = index"
-      [name]="
-      (i + 1) <= (usuario()?.raiting ?? 0)
-        ? 'star'
-        : (i + 0.5) <= (usuario()?.raiting ?? 0)
-            ? 'star-half'
-            : 'star-outline'
-    "
-      color="warning">
-    </ion-icon>
-  </div>
+  @if (usuario()) {
+    <div class="perfil-estrellas">
+      <ion-icon
+        *ngFor="let star of [].constructor(maxStars); let i = index"
+        [name]="
+        (i + 1) <= (usuario()!.raiting ?? 0)
+          ? 'star'
+          : (i + 0.5) <= (usuario()!.raiting ?? 0)
+              ? 'star-half'
+              : 'star-outline'
+      "
+        color="warning">
+      </ion-icon>
+    </div>
 
-  <!--  Estadísticas -->
-  <ion-grid class="perfil-stats">
-    <ion-row>
-      <ion-col>
-        <ion-icon name="cube-outline" color="tertiary"></ion-icon>
-        <p class="numero">{{usuario()?.intercambios}}</p>
-        <p class="label">Intercambios</p>
-      </ion-col>
-      <ion-col>
-        <ion-icon name="star-outline" color="warning"></ion-icon>
-        <p class="numero">{{usuario()?.raiting}}</p>
-        <p class="label">Valoración</p>
-      </ion-col>
-      <ion-col [routerLink]="['/favoritos', usuario()?.id]">
-              <ion-icon name="heart-outline" color="danger"></ion-icon>
-              <p class="numero">{{usuario()?.favoritos}}</p>
-              <p class="label">Favoritos</p>
-      </ion-col>
-      <ion-col [routerLink]="['/seguidores', usuario()?.id]">
-            <ion-icon name="people-outline" color="medium"></ion-icon>
-            <p class="numero">{{usuario()?.seguidores}}</p>
-            <p class="label">Seguidores</p>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <ion-grid class="perfil-stats">
+      <ion-row>
+        <ion-col>
+          <ion-icon name="cube-outline" color="tertiary"></ion-icon>
+          <p class="numero">{{usuario()!.intercambios}}</p>
+          <p class="label">Intercambios</p>
+        </ion-col>
+        <ion-col>
+          <ion-icon name="star-outline" color="warning"></ion-icon>
+          <p class="numero">{{usuario()!.raiting}}</p>
+          <p class="label">Valoración</p>
+        </ion-col>
+        <ion-col [routerLink]="['/favoritos', usuario()!.id]">
+          <ion-icon name="heart-outline" color="danger"></ion-icon>
+          <p class="numero">{{usuario()!.favoritos}}</p>
+          <p class="label">Favoritos</p>
+        </ion-col>
+        <ion-col [routerLink]="['/seguidores', usuario()!.id]">
+          <ion-icon name="people-outline" color="medium"></ion-icon>
+          <p class="numero">{{usuario()!.seguidores}}</p>
+          <p class="label">Seguidores</p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  } @else {
+    <div class="perfil-estrellas skeleton"></div>
+  }
 </div>
